# snowparkdev

./: .bashrc  .gitignore  README.md  connection_test.py  create_task.py  create_task_old.py  environment.yml  pyproject.toml  requirements.txt  setup.sh  setup_env.py  setup_udemy..py  tree.py
.devcontainer/: devcontainer.json  setup.sh  setup_old.sh
.github/workflows/: build_and_deploy.yml  build_and_deploy_dev.yml  build_and_deploy_prod.yml  build_and_deploy_qa.yml
.snowflake/: config.toml
first_snowpark_project/: deploy_snowflake_app.py  deploy_snowflake_app_bk.py  deploy_snowflake_app_bk2.py  deploy_snowpark_app.py  deploy_snowpark_app_copilot.py  requirements.txt  snowflake.yml
first_snowpark_project/app/python/: call_procedure_debug.py  create_task.py  dags.py  functions.py  procedures.py  process_stock_sales_data.py  session.py  test_session.py
first_snowpark_project/app/sql/views/: query_history_vw.sql
first_snowpark_project/data/: cleaned_stock_sales_data.csv  stock_sales_data.csv
src/first_snowpark_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/utils/: hello_snowpark.py
workspaces/snowparkdev/docs/: snowpark-setup.md
