[project]
name = "first_snowpark_project"
version = "0.1.0"
description = "Snowflake Snowpark DAG project"
authors = [
    { name = "Cory", email = "bcpurkistraining@gmail.com" }
]
dependencies = [
    "snowflake-snowpark-python==1.33.0",
    "snowflake-core==1.5.1",
    "numpy",
    "pandas",
    "pyarrow"
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
